website/websites/u64q/code/fasta.1.scala.log

Sat, 19 Jun 2010 02:32:02 GMT

MAKE:
mv fasta.scala fasta.scala
mv: `fasta.scala' and `fasta.scala' are the same file
make: [fasta.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.8.0.RC6/bin/scalac fasta.scala
fasta.scala:66: error: not found: type double
   def makeCumulative(a: Array[Pair[Char,double]]) = {
                                         ^
fasta.scala:71: error: ambiguous reference to overloaded definition,
both method + in class Double of type (x$1: Char)Double
and  method + in class Double of type (x$1: Short)Double
match argument types (Nothing) and expected result type Double
               cp = cp + percent; new Frequency(code.toByte,cp) 
                    ^
fasta.scala:82: error: not found: type byte
class Frequency(_code: byte, _percent: double){ 
                       ^
fasta.scala:82: error: not found: type double
class Frequency(_code: byte, _percent: double){ 
                                       ^
fasta.scala:96: error: not found: type int
   def writeRepeatingSequence(_alu: String, length: int) = {
                                                    ^
fasta.scala:119: error: not found: type int
   def writeRandomSequence(distribution: Array[Frequency], length: int) = {
                                                                   ^
fasta.scala:158: error: not found: type double
   def scaledTo(max: double) = {
                     ^
7 errors found
make: [fasta.scala_run] Error 1 (ignored)
3.88s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.6.0_18/bin/java -server  -Xbootclasspath/a:/usr/local/src/scala-2.8.0.RC6/lib/scala-library.jar fasta 250000

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: fasta
Caused by: java.lang.ClassNotFoundException: fasta
	at java.net.URLClassLoader$1.run(URLClassLoader.java:202)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:190)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:307)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:248)
Could not find the main class: fasta.  Program will exit.
